# AAPB2

./: .gitignore  .rspec  .rubocop.yml  .rubocop_todo.yml  .travis.yml  Capfile  Dockerfile  Dockerfile.local  Gemfile  Gemfile.lock.me  Gemfile.lock.old  Gemfile.me  LICENSE.txt  README.md  Rakefile  SECURITY.md  aapb  cmless.py  exhibits.ipynb  junk.txt  map.html  orgs.json  pyproject.toml  stations.json  to_solr_transcript_text
.github/: dependabot.yml
cmless/: models.py  parse.ipynb  parse.py
config/: .gitignore  application.rb  aws_ses.yml  blacklight.yml  database.yml  deploy.rb  environment.rb  exhibits.yml  featured.yml  global_guids.yml  jetty.yml  organizations.xml  organizations.yml  routes.rb  secrets.yml  sesame_street_alert_guids.txt  solr.yml  states.yml
db/: schema.rb
deploy/: before_migrate.rb
docs/: aapb-data-flow.draw.io.xml  aapb-servers.draw.io.xml  ams-ingest.md
jetty/: .gitignore  update_solr
lib/: aapb.rb  aapb_mailer.rb  access_control.rb  caption_converter.rb  carpet_factory.rb  ci_to_aws_transfer.rb  external_file.rb  formatter.rb  geo_i_p_country.rb  geo_location.rb  global_media.rb  html_scrubber.rb  htmlizer.rb  markdown.rb  markdowner.rb  pbcore-2.0.xsd  pbcore-2.1.xsd  pbcore_xml_to_json.xsl  query_to_terms_array.rb  rails_stub.rb  sesame_street_alert.rb  solr.rb  transcript_converter.rb  transcript_downloader.rb  transcript_viewer_helper.rb  wp_data.rb
public/: 404.html  educator_resources.html  robots.txt
scripts/: .gitignore  ams2_ingest.sh  batch_vtt_2_fixit_json2.sh  batchconcat.sh  check_non-square_pixels.sh  (+29 more)
(+1854 files in other folders)
